@@ -943,6 +943,18 @@ operator|.
 name|start
 argument_list|()
 expr_stmt|;
+operator|(
+operator|(
+name|NMContext
+operator|)
+name|context
+operator|)
+operator|.
+name|setNodeStatusUpdater
+argument_list|(
+name|nodeStatusUpdater
+argument_list|)
+expr_stmt|;
 name|containerManager
 operator|.
 name|init
