@@ -2403,6 +2403,29 @@ name|currentTime
 argument_list|)
 argument_list|)
 decl_stmt|;
+name|Context
+name|context
+init|=
+name|mock
+argument_list|(
+name|Context
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|when
+argument_list|(
+name|context
+operator|.
+name|getNMStateStore
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|stateStore
+argument_list|)
+expr_stmt|;
 name|Container
 name|container
 init|=
@@ -2413,8 +2436,6 @@ name|conf
 argument_list|,
 name|mockDispatcher
 argument_list|,
-name|stateStore
-argument_list|,
 name|launchContext
 argument_list|,
 literal|null
@@ -2422,6 +2443,8 @@ argument_list|,
 name|mockMetrics
 argument_list|,
 name|containerToken
+argument_list|,
+name|context
 argument_list|)
 decl_stmt|;
 name|this
@@ -2670,6 +2693,29 @@ name|currentTime
 argument_list|)
 argument_list|)
 decl_stmt|;
+name|Context
+name|context
+init|=
+name|mock
+argument_list|(
+name|Context
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|when
+argument_list|(
+name|context
+operator|.
+name|getNMStateStore
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|stateStore
+argument_list|)
+expr_stmt|;
 name|Container
 name|container
 init|=
@@ -2680,8 +2726,6 @@ name|conf
 argument_list|,
 name|mockDispatcher
 argument_list|,
-name|stateStore
-argument_list|,
 name|launchContext
 argument_list|,
 literal|null
@@ -2689,6 +2733,8 @@ argument_list|,
 name|mockMetrics
 argument_list|,
 name|containerToken
+argument_list|,
+name|context
 argument_list|)
 decl_stmt|;
 name|this
@@ -6365,14 +6411,17 @@ literal|null
 argument_list|,
 literal|null
 argument_list|,
-literal|null
-argument_list|,
 name|BuilderUtils
 operator|.
 name|newContainerTokenIdentifier
 argument_list|(
 name|containerToken
 argument_list|)
+argument_list|,
+name|nm
+operator|.
+name|getNMContext
+argument_list|()
 argument_list|)
 block|{
 annotation|@
@@ -6499,14 +6548,17 @@ literal|null
 argument_list|,
 literal|null
 argument_list|,
-literal|null
-argument_list|,
 name|BuilderUtils
 operator|.
 name|newContainerTokenIdentifier
 argument_list|(
 name|runningContainerToken
 argument_list|)
+argument_list|,
+name|nm
+operator|.
+name|getNMContext
+argument_list|()
 argument_list|)
 block|{
 annotation|@
@@ -6903,14 +6955,17 @@ literal|null
 argument_list|,
 literal|null
 argument_list|,
-literal|null
-argument_list|,
 name|BuilderUtils
 operator|.
 name|newContainerTokenIdentifier
 argument_list|(
 name|containerToken
 argument_list|)
+argument_list|,
+name|nm
+operator|.
+name|getNMContext
+argument_list|()
 argument_list|)
 block|{
 annotation|@
@@ -7127,14 +7182,17 @@ literal|null
 argument_list|,
 literal|null
 argument_list|,
-literal|null
-argument_list|,
 name|BuilderUtils
 operator|.
 name|newContainerTokenIdentifier
 argument_list|(
 name|containerToken
 argument_list|)
+argument_list|,
+name|nm
+operator|.
+name|getNMContext
+argument_list|()
 argument_list|)
 block|{
 annotation|@
