@@ -698,6 +698,24 @@ name|server
 operator|.
 name|nodemanager
 operator|.
+name|NodeStatusUpdater
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|nodemanager
+operator|.
 name|containermanager
 operator|.
 name|application
@@ -3236,6 +3254,18 @@ DECL|method|getNodeResourceMonitor ()
 specifier|public
 name|NodeResourceMonitor
 name|getNodeResourceMonitor
+parameter_list|()
+block|{
+return|return
+literal|null
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getNodeStatusUpdater ()
+specifier|public
+name|NodeStatusUpdater
+name|getNodeStatusUpdater
 parameter_list|()
 block|{
 return|return
