@@ -1544,6 +1544,18 @@ operator|.
 name|start
 argument_list|()
 expr_stmt|;
+operator|(
+operator|(
+name|NMContext
+operator|)
+name|context
+operator|)
+operator|.
+name|setNodeStatusUpdater
+argument_list|(
+name|nodeStatusUpdater
+argument_list|)
+expr_stmt|;
 block|}
 specifier|protected
 name|ContainerManagerImpl
