@@ -1148,6 +1148,24 @@ name|server
 operator|.
 name|nodemanager
 operator|.
+name|NodeStatusUpdater
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|nodemanager
+operator|.
 name|recovery
 operator|.
 name|NMNullStateStoreService
@@ -2149,6 +2167,11 @@ name|getContainerState
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|verifyOutofBandHeartBeat
+argument_list|(
+name|wc
+argument_list|)
+expr_stmt|;
 name|assertNull
 argument_list|(
 name|wc
@@ -2294,6 +2317,11 @@ name|c
 operator|.
 name|getContainerState
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|verifyOutofBandHeartBeat
+argument_list|(
+name|wc
 argument_list|)
 expr_stmt|;
 name|assertNull
@@ -2546,6 +2574,11 @@ name|c
 operator|.
 name|getContainerState
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|verifyOutofBandHeartBeat
+argument_list|(
+name|wc
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -4552,6 +4585,29 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|verifyOutofBandHeartBeat (WrappedContainer wc)
+specifier|private
+name|void
+name|verifyOutofBandHeartBeat
+parameter_list|(
+name|WrappedContainer
+name|wc
+parameter_list|)
+block|{
+name|verify
+argument_list|(
+name|wc
+operator|.
+name|context
+operator|.
+name|getNodeStatusUpdater
+argument_list|()
+argument_list|)
+operator|.
+name|sendOutofBandHeartBeat
+argument_list|()
+expr_stmt|;
+block|}
 DECL|class|ResourcesReleasedMatcher
 specifier|private
 specifier|static
@@ -5445,6 +5501,18 @@ name|ByteBuffer
 argument_list|>
 name|serviceData
 decl_stmt|;
+DECL|field|context
+specifier|final
+name|Context
+name|context
+init|=
+name|mock
+argument_list|(
+name|Context
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 DECL|method|WrappedContainer (int appId, long timestamp, int id, String user)
 name|WrappedContainer
 parameter_list|(
@@ -5643,16 +5711,6 @@ argument_list|,
 name|LogBus
 argument_list|)
 expr_stmt|;
-name|Context
-name|context
-init|=
-name|mock
-argument_list|(
-name|Context
-operator|.
-name|class
-argument_list|)
-decl_stmt|;
 name|when
 argument_list|(
 name|context
@@ -5691,6 +5749,29 @@ operator|.
 name|thenReturn
 argument_list|(
 name|stateStore
+argument_list|)
+expr_stmt|;
+name|NodeStatusUpdater
+name|nodeStatusUpdater
+init|=
+name|mock
+argument_list|(
+name|NodeStatusUpdater
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|when
+argument_list|(
+name|context
+operator|.
+name|getNodeStatusUpdater
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|nodeStatusUpdater
 argument_list|)
 expr_stmt|;
 name|ContainerExecutor
@@ -6157,10 +6238,6 @@ name|conf
 argument_list|,
 name|dispatcher
 argument_list|,
-operator|new
-name|NMNullStateStoreService
-argument_list|()
-argument_list|,
 name|ctxt
 argument_list|,
 literal|null
@@ -6168,6 +6245,8 @@ argument_list|,
 name|metrics
 argument_list|,
 name|identifier
+argument_list|,
+name|context
 argument_list|)
 expr_stmt|;
 name|dispatcher
